--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <!-- Header -->
      <header class="w-full h-[360px] bg-zinc-900 bg-home bg-cover bg-center">
         <div class="w-full h-full flex flex-col items-center justify-center">
-            <img src="./assets/img/marmita1.jpg" alt="Logo Cardapio" class="w-32 h-32 rounded-full shadow-lg hover:scale-110 transition-all duration-200">
-            <h1 class="text-3xl mt-4 mb-2 font-bold text-white">Marmita Marmota</h1>
-            <span class="text-white font-medium">Rua Tal, 333 - Iturama / MG</span>
+            <img src="./assets/img/lele.jpg" alt="Logo Cardapio" class="w-32 h-32 rounded-full shadow-lg hover:scale-110 transition-all duration-200">
+            <h1 class="text-3xl mt-4 mb-2 font-bold text-white">Carol Burger</h1>
+            <span class="text-white font-medium">Rua Edna Ferreira de Morais, 117 - Bairro Floresta - Iturama / MG</span>
             <div class="bg-green-600 px-4 py-1 rounded-lg mt-4"  id="date-span">
                 <span class="text-white font-medium">Seg á Dom - 18:00 as 22:00</span>
             </div>
