qty itens no carrinho

--- a/index.html
+++ b/index.html
@@ -270,10 +270,7 @@
                 <span 
                 id="cart-count"
                 class="hidden absolute -top-1 -right-1 bg-yellow-300 text-red-600 text-xs font-bold rounded-full w-5 h-5 items-center justify-center"
-            >
-                
-            </span>
-            </i>
+            ></span></i>
             
         </div>
     </button>
