--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+    <!-- META TAG OG -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Cardápio Lele - Carol Burger" />
+    <meta property="og:description" content="Conheça nosso cardápio e faça seu pedido online!" />
+    <meta property="og:image" content="https://burger-one-iota.vercel.app/assets/img/lele.jpg" />
+    <meta property="og:site_name" content="Carol Burger" />
+    
     <link rel="stylesheet" href="./styles/output.css" />
 
     <title>Cardápio-Lele</title>
